--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "bun run index.ts",
-    "dev": "bun --hot run index.ts"
+    "dev": "bun --hot run index.ts",
+    "prebuild": "bunx @edgedb/generate edgeql-js"
   },
   "devDependencies": {
     "@edgedb/generate": "^0.5.5",
