--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,28 @@
-# fly.toml app configuration file generated for ai-fortune-teller-backend on 2024-08-28T21:59:41+02:00
+# fly.toml app configuration file generated for aift-app on 2024-08-30T13:30:33+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ai-fortune-teller-backend'
+app = 'aift-app'
 primary_region = 'ams'
 
-[env]
-  PORT = "3000"
+[experimental]
+allowed_public_ports = []
+auto_rollback = true
+cmd = "start.sh"
+entrypoint = "sh"
 
 [build]
-  image = "edgedb/edgedb"
 
 [http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 3000
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '512mb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
